//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

import "dxos/keys.proto";

package dxos.halo.keys;

// TODO(burdon): Prefix enums (e.g., KEY_TYPE_UNKNOWN).
// TODO(burdon): CamelCase variables (e.g., public_key).

//
// The type/use of a public key.
//
enum KeyType {
  UNKNOWN = 0;
  IDENTITY = 1;
  DEVICE = 2;
  SPACE = 3;
  FEED = 4;
  DXNS_ADDRESS = 5;
}

message KeyRecord {
  /**
   * The `KeyType` type of the key. This is often unknown for keys from other sources.
   */
  KeyType type = 1;

  /**
   * The public key as a Buffer (required).
   */
  dxos.keys.PublicKey public_key = 2;

  /**
   * The secret key as a Buffer (this will never be visible outside the Keyring).
   */
  optional dxos.keys.PrivateKey secret_key = 3;

  /**
   * Is this key from a Greeting "hint"?
   */
  optional bool hint = 4;

  /**
   * Determines if this is our key?
   * Usually true if `secret_key` is present; may be false for "inception keys" such as the Space key.
   */
  optional bool own = 5; // TODO(burdon): Rename "local" or "private".

  /**
   * Is this key to be trusted?
   */
  optional bool trusted = 6; // TODO(burdon): Rename "trust". How is this determined?

  /**
   * An RFC-3339 date/time string for when the key was added to the Keyring.
   */
  optional string added = 7;

  /**
   * An RFC-3339 date/time string for when the key was created.
   */
  optional string created = 8;
}

message KeyRecordList {
  repeated KeyRecord keys = 1;
}
